--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Background Generator</title>
     <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/png" href="icon111.png" />
+
 </head>
 <body>
     <h1>Background Generator</h1>
